log
Tue, May 13, 2025 12:52:25 PM: 
 sudoku.c | 17 +++++++++++++++++
 1 file changed, 17 insertions(+)
Compilation failed
In file included from test.c:5:0:
sudoku.c: In function 'get_adj_nodes':
sudoku.c:65:25: error: implicit declaration of function 'add' [-Werror=implicit-function-declaration]
                         add(list, new);
                         ^~~
sudoku.c:72:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
3f0e54c
